[package]
name = "influx-writer"
version = "0.10.1"
authors = ["Jonathan Strong <jonathan.strong@gmail.com>"]
edition = "2018"

[lib]
name = "influx_writer"
path = "src/lib.rs"

[[example]]
name = "write"
path = "examples/write.rs"
required-features = ["signal-hook"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.10"
slog = "2"
slog-term = "2"
uuid = { version = "0.8", features = ["serde", "v4", "slog"] }
slog-async = "2"
smallvec = "0.6"
crossbeam-channel = "0.3"
pretty_toa = "1.0.0"
signal-hook = { version = "0.1.15", optional = true }

decimal = { git = "https://github.com/jonathanstrong/decimal", branch = "v2.3.x" }
decimal-macros = { git = "https://github.com/jonathanstrong/decimal", branch = "v2.3.x" }

[features]
default = ["string-tags"]
trace = ["slog/release_max_level_trace", "slog/max_level_trace"]
debug = ["slog/release_max_level_debug", "slog/max_level_debug"]
string-tags = []
unstable = []
# tests that authenticated requests are accepted by influxdb server
#
# setup: 
#
# - create database "auth_test"
# - create user "auth_test_user" with password "hot dog" grant permissions
#   to write to "auth_test" database
#
auth-tests = []

[profile.bench]
lto = true
