[package]
name = "influx-writer"
version = "0.20.0-rc.1"
authors = ["Jonathan Strong <jonathan.strong@gmail.com>"]
edition = "2018"
description = "opinionated influxdb client"
publish = ["mmcxi"]
license = "all rights reserved"
repository = "https://git.mmcxi.com/jstrong/influx-writer.git"
exclude = ["justfile"]

[lib]
name = "influx_writer"
path = "src/lib.rs"

[[example]]
name = "write"
path = "examples/write.rs"
required-features = ["examples"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.10" }
hyper-native-tls = "0.3.0"
slog = "2"
uuid = { version = "0.8", features = ["serde", "v4", "slog"] }
smallvec = "1.6"
crossbeam-channel = "0.5"
pretty_toa = "1.0.0"
signal-hook = { version = "0.3.8", optional = true }
slog-async = { version = "2", optional = true }
slog-term =  { version = "2", optional = true }

# decimal = { version = "2.4.3", registry = "mmcxi" }
# decimal-macros = { version = "0.3", registry = "mmcxi" }

decimal = { git = "https://github.com/jonathanstrong/decimal", branch = "v2.5.x" }
decimal-macros = { git = "https://github.com/jonathanstrong/decimal-macros" }

# [dev-dependencies]

[features]
default = ["string-tags"]
trace = ["slog/release_max_level_trace", "slog/max_level_trace"]
debug = ["slog/release_max_level_debug", "slog/max_level_debug"]
string-tags = []
unstable = []
# tests that authenticated requests are accepted by influxdb server
#
# setup: 
#
# - create database "auth_test"
# - create user "auth_test_user" with password "hot dog" grant permissions
#   to write to "auth_test" database
#
auth-tests = ["http-tests"]
http-tests = []
examples = ["signal-hook", "slog-async", "slog-term"]

[profile.bench]
lto = true
